--- a/menu.html
+++ b/menu.html
@@ -29,28 +29,28 @@
            <h3>Entrées</h3>
         <div>
           <div class="link-food">
-              <div>
-                  <h2>Fricassée d'escargot</h2>
-                  <p>Au piment d'Espelette</p>
-                  <span>25€</span>
+              <div class="menus">
+                  <div><h2>Fricassée d'escargot</h2>
+                  <p>Au piment d'Espelette</p></div>
+                  <div><span>25€</span></div>
               </div>
               <div><i class="fas fa-check-circle"></i>
               </div>
           </div>
           <div class="link-food">
-            <div>
-                <h2>Foie gras de canard mi-cuit</h2>
-                <p>Et ses copeaux de truffe noire</p>
-                <span>35€</span>
+            <div class="menus">
+                <div><h2>Foie gras de canard mi-cuit</h2>
+                <p>Et ses copeaux de truffe noire</p></div>
+                <div><span>35€</span></div>
             </div>
             <div><i class="fas fa-check-circle"></i>
             </div>
           </div>
           <div class="link-food">
-          <div>
-              <h2>Oeuf au plat</h2>
-              <p>Assaisonné à la truffe sur lit de caviar</p>
-              <span>20€</span>
+          <div class="menus">
+              <div><h2>Oeuf au plat</h2>
+              <p>Assaisonné à la truffe sur lit de caviar</p></div>
+              <div><span>20€</span></div>
           </div>
           <div><i class="fas fa-check-circle"></i>
           </div>
@@ -61,28 +61,28 @@
         <h3>Plats</h3>
         <div>
           <div class="link-food">
-            <div>
-              <h2>Filet de boeuf aux herbes</h2>
-              <p>Accompagné de sa ribambelle de légumes</p>
-              <span>40€</span>
+            <div class="menus">
+              <div><h2>Filet de boeuf aux herbes</h2>
+              <p>Accompagné de sa ribambelle de légumes</p></div>
+              <div><span>40€</span></div>
             </div>
             <div><i class="fas fa-check-circle"></i>
             </div>
           </div>
           <div class="link-food">
-            <div>
-              <h2>Parmentier de queue de boeuf</h2>
-              <p>À la truffe noire sur sa purée de panais</p>
-              <span>35€</span>
+            <div class="menus">
+              <div><h2>Parmentier de queue de boeuf</h2>
+              <p>À la truffe noire sur sa purée de panais</p></div>
+              <div><span>35€</span></div>
             </div>
             <div><i class="fas fa-check-circle"></i>
             </div>
           </div>
           <div class="link-food">
-            <div>
-            <h2>Filet de turbot</h2>
-            <p>Aux agrumes</p>
-            <span>44€</span>
+            <div class="menus">
+            <div><h2>Filet de turbot</h2>
+            <p>Aux agrumes</p></div>
+            <div><span>44€</span></div>
             </div>
            <div><i class="fas fa-check-circle"></i>
          </div>
@@ -93,28 +93,28 @@
         <h3>Desserts</h3>
       <div>
         <div class="link-food">
-          <div>
-              <h2>Paris-Brest</h2>
-              <p>Revisité</p>
-              <span>18€</span>
+          <div class="menus">
+              <div><h2>Paris-Brest</h2>
+              <p>Revisité</p></div>
+              <div><span>18€</span></div>
           </div>
           <div><i class="fas fa-check-circle"></i>
           </div>
         </div>
         <div class="link-food">
-          <div>
-              <h2>Macaron au chocolat d'exception</h2>
-              <p>Et glace à la vanille de Madagascar</p>
-              <span>22€</span>
+          <div class="menus">
+              <div><h2>Macaron au chocolat d'exception</h2>
+              <p>Et glace à la vanille de Madagascar</p></div>
+              <div><span>22€</span></div>
           </div>
           <div><i class="fas fa-check-circle"></i>
           </div>
         </div>
         <div class="link-food">
-          <div>
-            <h2>Mousse au chocolat</h2>
-            <p>Au piment d'Espelette et à la truffe noire</p>
-            <span>23€</span>
+          <div class="menus">
+            <div><h2>Mousse au chocolat</h2>
+            <p>Au piment d'Espelette et à la truffe noire</p></div>
+            <div><span>23€</span></div>
           </div>
           <div><i class="fas fa-check-circle"></i>
           </div>
