--- a/menu1.html
+++ b/menu1.html
@@ -29,37 +29,37 @@
            <h3>Entrées</h3>
         <div>
           <div class="link-food">
-              <div>
-                  <h2>Ravioles de foie gras</h2>
-                  <p>Accompagnés de leur crème à la truffe</p>
-                  <span>25€</span>
+              <div class="menus">
+                  <div><h2>Ravioles de foie gras</h2>
+                  <p>Accompagnés de leur crème à la truffe</p></div>
+                  <div><span>25€</span></div>
               </div>
               <div><i class="fas fa-check-circle"></i>
               </div>
           </div>
           <div class="link-food">
-            <div>
-                <h2>Caviar osciètre</h2>
-                <p>Sur blini à la farine de blé noir</p>
-                <span>35€</span>
+            <div class="menus">
+                <div><h2>Caviar osciètre</h2>
+                <p>Sur blini à la farine de blé noir</p></div>
+                <div><span>35€</span></div>
             </div>
             <div><i class="fas fa-check-circle"></i>
             </div>
           </div>
           <div class="link-food">
-          <div>
-              <h2>Homard et espuma de potiron</h2>
-              <p>Mariné aux zestes d'orange</p>
-              <span>20€</span>
+          <div class="menus">
+              <div><h2>Homard et espuma de potiron</h2>
+              <p>Mariné aux zestes d'orange</p></div>
+              <div><span>20€</span></div>
           </div>
           <div><i class="fas fa-check-circle"></i>
           </div>
           </div>
           <div class="link-food">
-            <div>
-                <h2>Foie gras de canard cuit entier</h2>
-                <p>Confiture de figue et pain toasté</p>
-                <span>35€</span>
+            <div class="menus">
+                <div><h2>Foie gras de canard cuit entier</h2>
+                <p>Confiture de figue et pain toasté</p></div>
+                <div><span>35€</span></div>
             </div>
             <div><i class="fas fa-check-circle"></i>
             </div>
@@ -70,28 +70,28 @@
         <h3>Plats</h3>
         <div>
           <div class="link-food">
-            <div>
-              <h2>Noix de coquilles Saint-Jacques</h2>
-              <p>Sur lit de purée de céleri-rave</p>
-              <span>40€</span>
+            <div class="menus">
+              <div><h2>Noix de coquilles Saint-Jacques</h2>
+              <p>Sur lit de purée de céleri-rave</p></div>
+              <div><span>40€</span></div>
             </div>
             <div><i class="fas fa-check-circle"></i>
             </div>
           </div>
           <div class="link-food">
-            <div>
-              <h2>Langoustine poêlée</h2>
-              <p>Purée de patate douce</p>
-              <span>35€</span>
+            <div class="menus">
+              <div><h2>Langoustine poêlée</h2>
+              <p>Purée de patate douce</p></div>
+              <div><span>35€</span></div>
             </div>
             <div><i class="fas fa-check-circle"></i>
             </div>
           </div>
           <div class="link-food">
-            <div>
-            <h2>Mijoté de queue de boeuf </h2>
-            <p>Et riz sauvage aux zestes de citron</p>
-            <span>44€</span>
+            <div class="menus">
+            <div><h2>Mijoté de queue de boeuf </h2>
+            <p>Et riz sauvage aux zestes de citron</p></div>
+            <div><span>44€</span></div>
             </div>
            <div><i class="fas fa-check-circle"></i>
          </div>
@@ -102,28 +102,28 @@
         <h3>Desserts</h3>
       <div>
         <div class="link-food">
-          <div>
-              <h2>Macaron noisette et chocolat</h2>
-              <p>Glace au caramel brun et sel de Guérande</p>
-              <span>18€</span>
+          <div class="menus">
+              <div><h2>Macaron noisette et chocolat</h2>
+              <p>Glace au caramel brun et sel de Guérande</p></div>
+              <div><span>18€</span></div>
           </div>
           <div><i class="fas fa-check-circle"></i>
           </div>
         </div>
         <div class="link-food">
-          <div>
-              <h2>Baba au rhum revisité</h2>
-              <p>Avec son coulis de citron</p>
-              <span>22€</span>
+          <div class="menus">
+              <div><h2>Baba au rhum revisité</h2>
+              <p>Avec son coulis de citron</p></div>
+              <div><span>22€</span></div>
           </div>
           <div><i class="fas fa-check-circle"></i>
           </div>
         </div>
         <div class="link-food">
-          <div>
-            <h2>Tarte au citron meringuée</h2>
+          <div class="menus">
+            <div><h2>Tarte au citron meringuée</h2></div>
             <p>Déstructurée</p>
-            <span>23€</span>
+            <div><span>23€</span></div>
           </div>
           <div><i class="fas fa-check-circle"></i>
           </div>
