--- a/menu2.html
+++ b/menu2.html
@@ -29,28 +29,28 @@
            <h3>Entrées</h3>
         <div>
           <div class="link-food">
-              <div>
-                  <h2>Tartare de poulpe acidulé</h2>
-                  <p>Aux zestes d'orange</p>
-                  <span>25€</span>
+              <div class="menus">
+                  <div><h2>Tartare de poulpe acidulé</h2>
+                  <p>Aux zestes d'orange</p></div>
+                  <div><span>25€</span></div>
               </div>
               <div><i class="fas fa-check-circle"></i>
               </div>
           </div>
           <div class="link-food">
-            <div>
-                <h2>Velouté de légumes d'antan</h2>
-                <p>Carotte, panais, topinambour</p>
-                <span>35€</span>
+            <div class="menus">
+                <div><h2>Velouté de légumes d'antan</h2>
+                <p>Carotte, panais, topinambour</p></div>
+                <div><span>35€</span></div>
             </div>
             <div><i class="fas fa-check-circle"></i>
             </div>
           </div>
           <div class="link-food">
-          <div>
-              <h2>Soupe à l'oignon</h2>
-              <p>Revisitée</p>
-              <span>20€</span>
+          <div class="menus">
+              <div><h2>Soupe à l'oignon</h2>
+              <p>Revisitée</p></div>
+              <div><span>20€</span></div>
           </div>
           <div><i class="fas fa-check-circle"></i>
           </div>
@@ -61,28 +61,28 @@
         <h3>Plats</h3>
         <div>
           <div class="link-food">
-            <div>
-              <h2>Coquilles Saint-Jacques</h2>
-              <p>Accompagnées d'une purée de panais</p>
-              <span>40€</span>
+            <div class="menus">
+              <div><h2>Coquilles Saint-Jacques</h2>
+              <p>Accompagnées d'une purée de panais</p></div>
+              <div><span>40€</span></div>
             </div>
             <div><i class="fas fa-check-circle"></i>
             </div>
           </div>
           <div class="link-food">
-            <div>
-              <h2>Magret de canard</h2>
-              <p>Et parmentier de pommes de terre</p>
-              <span>35€</span>
+            <div class="menus">
+              <div><h2>Magret de canard</h2>
+              <p>Et parmentier de pommes de terre</p></div>
+              <div><span>35€</span></div>
             </div>
             <div><i class="fas fa-check-circle"></i>
             </div>
           </div>
           <div class="link-food">
-            <div>
-            <h2>Pigeonneau d’Ille-et-Vilaine</h2>
-            <p>Sur son lit de gnocchis aux légumes</p>
-            <span>44€</span>
+            <div class="menus">
+            <div><h2>Pigeonneau d’Ille-et-Vilaine</h2>
+            <p>Sur son lit de gnocchis aux légumes</p></div>
+            <div><span>44€</span></div>
             </div>
            <div><i class="fas fa-check-circle"></i>
          </div>
@@ -93,28 +93,28 @@
         <h3>Desserts</h3>
       <div>
         <div class="link-food">
-          <div>
-              <h2>Pétales de violettes glacés</h2>
-              <p>Et purée de noisettes</p>
-              <span>18€</span>
+          <div class="menus">
+              <div><h2>Pétales de violettes glacés</h2>
+              <p>Et purée de noisettes</p></div>
+              <div><span>18€</span></div>
           </div>
           <div><i class="fas fa-check-circle"></i>
           </div>
         </div>
         <div class="link-food">
-          <div>
-              <h2>Fondant au chocolat</h2>
-              <p>Revisité</p>
-              <span>22€</span>
+          <div class="menus">
+              <div><h2>Fondant au chocolat</h2>
+              <p>Revisité</p></div>
+              <div><span>22€</span></div>
           </div>
           <div><i class="fas fa-check-circle"></i>
           </div>
         </div>
         <div class="link-food">
-          <div>
-            <h2>Millefeuille croustillant</h2>
-            <p>Myrtilles et pâte d’amande</p>
-            <span>23€</span>
+          <div class="menus">
+            <div><h2>Millefeuille croustillant</h2>
+            <p>Myrtilles et pâte d’amande</p></div>
+            <div><span>23€</span></div>
           </div>
           <div><i class="fas fa-check-circle"></i>
           </div>
