--- a/menu3.html
+++ b/menu3.html
@@ -29,28 +29,28 @@
            <h3>Entrées</h3>
         <div>
           <div class="link-food">
-              <div>
-                  <h2>Tartare de thon</h2>
-                  <p>Assaisonné au yuzu</p>
-                  <span>25€</span>
+              <div class="menus">
+                  <div><h2>Tartare de thon</h2>
+                  <p>Assaisonné au yuzu</p></div>
+                  <div><span>25€</span></div>
               </div>
               <div><i class="fas fa-check-circle"></i>
               </div>
           </div>
           <div class="link-food">
-            <div>
-                <h2>Bouchée de homard croustillant</h2>
-                <p>Et sa farandole de petits légumes</p>
-                <span>35€</span>
+            <div class="menus">
+                <div><h2>Bouchée de homard croustillant</h2>
+                <p>Et sa farandole de petits légumes</p></div>
+                <div><span>35€</span></div>
             </div>
             <div><i class="fas fa-check-circle"></i>
             </div>
           </div>
           <div class="link-food">
-          <div>
-              <h2>Velouté de cèpes</h2>
-              <p>Aux truffes</p>
-              <span>20€</span>
+          <div class="menus">
+              <div><h2>Velouté de cèpes</h2>
+              <p>Aux truffes</p></div>
+              <div><span>20€</span></div>
           </div>
           <div><i class="fas fa-check-circle"></i>
           </div>
@@ -61,28 +61,28 @@
         <h3>Plats</h3>
         <div>
           <div class="link-food">
-            <div>
-              <h2>Poulet rôti aux herbes de Provence</h2>
-              <p>Et sa crème de truffe</p>
-              <span>40€</span>
+            <div class="menus">
+              <div><h2>Poulet rôti aux herbes de Provence</h2>
+              <p>Et sa crème de truffe</p></div>
+              <div><span>40€</span></div>
             </div>
             <div><i class="fas fa-check-circle"></i>
             </div>
           </div>
           <div class="link-food">
-            <div>
-              <h2>Langouste rôtie</h2>
-              <p>Et ses légumes de saison</p>
-              <span>35€</span>
+            <div class="menus">
+              <div><h2>Langouste rôtie</h2>
+              <p>Et ses légumes de saison</p></div>
+              <div><span>35€</span></div>
             </div>
             <div><i class="fas fa-check-circle"></i>
             </div>
           </div>
           <div class="link-food">
-            <div>
-            <h2>Côte de boeuf Angus</h2>
-            <p>Et sa purée de panais</p>
-            <span>44€</span>
+            <div class="menus">
+            <div><h2>Côte de boeuf Angus</h2>
+            <p>Et sa purée de panais</p></div>
+            <div><span>44€</span></div>
             </div>
            <div><i class="fas fa-check-circle"></i>
          </div>
@@ -93,28 +93,28 @@
         <h3>Desserts</h3>
       <div>
         <div class="link-food">
-          <div>
-              <h2>Farandole de desserts</h2>
-              <p>Du chef</p>
-              <span>18€</span>
+          <div class="menus">
+              <div><h2>Farandole de desserts</h2>
+              <p>Du chef</p></div>
+              <div><span>18€</span></div>
           </div>
           <div><i class="fas fa-check-circle"></i>
           </div>
         </div>
         <div class="link-food">
-          <div>
-              <h2>Crème brulée</h2>
-              <p>Revisitée</p>
-              <span>22€</span>
+          <div class="menus">
+              <div><h2>Crème brulée</h2>
+              <p>Revisitée</p></div>
+              <div><span>22€</span></div>
           </div>
           <div><i class="fas fa-check-circle"></i>
           </div>
         </div>
         <div class="link-food">
-          <div>
-            <h2>Tiramisu</h2>
-            <p>À la noisette</p>
-            <span>23€</span>
+          <div class="menus">
+            <div><h2>Tiramisu</h2>
+            <p>À la noisette</p></div>
+            <div><span>23€</span></div>
           </div>
           <div><i class="fas fa-check-circle"></i>
           </div>
